--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -58,4 +58,13 @@ body {
     width: 100%;
 }
 
+h3 {
+    background: #4aaaa5;
+    color: #ffffff;
+    align-content: center;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+}
+
 
